# GF3DF

./: .gitattributes  .gitignore  CMTSOLUTION  CMakeLists.txt  README.md  hdf5_read.F90  plotseis.py  single_element.h5  single_element_not_fortran.h5  test_interpolation_plot.py
apps/: CMakeLists.txt  buildkdtree.F90  get_sac_seismograms.F90  get_sac_seismograms_sdp.F90  get_sac_seismograms_windows.F90  get_sdp_demo.F90  get_seismograms.F90  hdf5_read.F90  interpolate_source.F90  locate_source.F90  make_ellipticity.F90  print_cmt.F90  test_interpolation.F90  test_rw.F90  test_rw.c  test_utils.F90  write_sac_seismograms.F90  write_seismograms.F90  write_source_time_functions.F90
docs/source/: conf.py  gf3d.rst  index.rst
external_program/: get_subset.F90  test_gf3d.F90
include/: config.h
plotting_scripts/: plot_ellipticity.py  plotseis.py  plotseis_sdp.py
src/: CMakeLists.txt  constants.F90  ctypes.F90  file_info.c  get_cmt.F90  gf3d.F90  hdf5_utils.F90  interpolation.F90  io.F90  kdtree_search.F90  parameters.F90  setup_source_location.F90  source_location.F90  stf.F90  utils.F90
src/fftpack-sources/: CMakeLists.txt  README.md  fftpack.f90  fftpack_dct.f90  fftpack_fft.f90  fftpack_ifft.f90  fftpack_ifftshift.f90  fftpack_irfft.f90  fftpack_rfft.f90  fftpack_utils.f90
src/gf/: CMakeLists.txt  gf.F90  gf_io.F90  gf_types.F90  io.F90  setup_source_location.F90
src/gf3d/: CMakeLists.txt  gf3d.F90  gf3d_get_seismograms.F90  gf3d_read_gf.F90  gf3d_write_seismograms.F90  interpolate_seismograms.F90  interpolate_source.F90  seismograms.F90  seismograms_windows.F90
src/interpolation/: CMakeLists.txt  interpolation.F90  splines.F90
src/io/: CMakeLists.txt  GF.F90  io.F90  output.F90
src/location/: CMakeLists.txt  point_location.F90  setup_source_location.F90  source_location.F90
src/mesh/: CMakeLists.txt  gll_library.F90  hex_nodes.F90  jacobian.F90  lagrange_poly.F90  reduce.F90  rthetaphi_xyz.F90  spline_routines.F90  topo.F90
src/meshlocation/: CMakeLists.txt  jacobian.F90  lagrange_poly.F90  point_location.F90
src/sac/: CMakeLists.txt  sac.F90
src/sources/: CMakeLists.txt  io.F90  sources.F90  types.F90  utils.F90
src/utils/: CMakeLists.txt  calendar.F90  error_functions.F90  hdf5_utils.F90  heap_sort.F90  stf.F90  utils.F90
